Remove height from sidebar navigation to prevent it overlapping with  other grid rows

--- a/sass/includes/_jumplinks.scss
+++ b/sass/includes/_jumplinks.scss
@@ -2,7 +2,6 @@
   position: sticky;
   top: 0;
   padding: 2.5rem 0 0 1rem;
-  height: 100vh;
 
   &__heading {
     font-size: 2rem;
